# PiRV

HW1/: HW.cpp
Lab2/: ConsoleApplication2.cpp  ConsoleApplication3.cpp
Laboratory_3-master/: CMakeLists.txt  client.cpp  client.hpp  main.cpp  server.cpp  server.hpp
RK1/: rk1_1.cpp  rk1_2.cpp
Seminar_task_1/: Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task6.cpp  Task7.cpp  Task8.cpp  Task9.cpp
Seminar_task_1/Task10_11/: FileManager.cpp  FileManager.hpp  Group.cpp  Group.hpp  Person.cpp  Person.hpp  RecordBook.cpp  RecordBook.hpp  Student.cpp  Student.hpp  Teacher.cpp  Teacher.hpp  main.cpp
lab3/: client.cpp  server.cpp
